--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="container">
+      <div id="app">
+        <h1>Lista delle email</h1>
+        <ul>
+          <li v-for="email in emails">{{email}}</li>
+        </ul>
+      </div>
+    </div>
     <!-- my script  -->
     <script src="js/main.js"></script>
-    <div class="container">
-      <div id="app"></div>
-    </div>
   </body>
 </html>
