aggiunto loader durante cariacamento

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <!-- print delle email -->
           <li v-for="email in emails">{{email}}</li>
         </ul>
+        <div v-else class="loader"></div>
       </div>
     </div>
     <!-- my script  -->
